Adding new content

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                         I am currently a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Lecturer in Computer Vision and AI </a> at CVSSP, University of Surrey, where I finished PhD in 'General dynamic scene reconstruction from multi-view videos' in 2016, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
                     </p>
                     <p>
-                        <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.
+                        <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Generative AI, LLMs, Multi-view Performance Capture and Immersive Technologies.
 						<br>
-						My work was published in <a href="https://www.rsipvision.com/ECCV2016-Thursday/12/">Computer Vision News Magazine</a> and here are a few videos of my work.
+						<!-- My work was published in <a href="https://www.rsipvision.com/ECCV2016-Thursday/12/">Computer Vision News Magazine</a>.
 					</p>
 				</div>
 			
-				<!-- This is added to display videos in a row -- start -->
+				This is added to display videos in a row -- start 
 				<p><div class="contenidovid">
 				<div class="video-wrapper">
 					<iframe src="https://www.youtube.com/embed/mA60vkLXBJ0?&autoplay=1;&loop=1" frameborder="25" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -116,8 +116,8 @@
 				<!-- This is added to display videos in a row // Remove &autoplay=1&loop=1 to remove autoplay from the videos-- end -->
 				<!-- horitzontal bar -->
 				<hr>
-			</div>
-		</div>
+			</div> 
+		</div> -->
 	</section>
 
 	<section id="research">
@@ -125,6 +125,44 @@
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 				<h3><font size="+2" color="#000080">Research</font></h3>
 				<h4><b><font size="+1">Projects</font></b></h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/costar.png" />
+							</a>
+						</td>
+						<td>
+							<b>CoSTAR National Lab for R&D in Creative Technology</b><br>
+							<i> Arts and Humanities Research Council (AHRC) </i><br>
+							Oct 2023 - Sep 2033<br>
+							<!-- <span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="http://www.figmentproductions.co.uk/?portfolio=alive">Figment Productions</a>
+								<a class="btn btn-success" target="_blank" href="https://www.foundry.com/trends/research/alive-project">Foundry</a>
+								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
+							</span> -->
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/ai4me.png" />
+							</a>
+						</td>
+						<td>
+							<b>AI4ME: AI for Personalised Media Experiences</b><br>
+							<i>Prosperity Partnership with BBC Research and Development </i><br>
+							Oct 2021 - Sep 2026<br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://ai4me.surrey.ac.uk">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -388,7 +426,7 @@
 					</tr>
 				</table>
 				<br/>
-				
+				<!--
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -406,8 +444,8 @@
 						</td>
 					</tr>
 				</table>
-				<br/>
-				<table class="table-responsive">
+				<br/> -->
+				<!-- <table class="table-responsive">
 					<tr>
 						<td>
 							<a href="#">
@@ -424,7 +462,7 @@
 						</td>
 					</tr>
 				</table>
-				<br/>
+				<br/> -->
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -562,7 +600,7 @@
 					</tr>
 				</table>
 				<br/>
-				<!-- <h4>2014</h4> -->
+				<!-- <h4>2014</h4> 
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -580,7 +618,7 @@
 						</td>
 					</tr>
 				</table>
-				<br/>
+				<br/>-->
 				<!-- <h4>2012</h4> -->
 				<table class="table-responsive">
 					<tr>
@@ -663,11 +701,82 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/files/bmvc23.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://bmvc2023.org"> British Machine Vision Conference (BMVC 2023) </a>, Aberdeen, UK <br>
+							<b>Workshop Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/cvmp23.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://www.cvmp-conference.org/2023/"> The 20th European Conference on Visual Media Production (CVMP 2023) </a>, London, UK <br>
+							<b>Conference Co-Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/dynavis2021.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://dynavis.github.io/2023/"> DynaVis - The Fourth International Workshop on Dynamic Scene Reconstruction @ CVPR 2023 </a> Vancouver, Canada <br>
+							<b>Organiser</b> <br>
+							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/bmvc22.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://bmvc2022.org"> British Machine Vision Conference (BMVC 2022) </a>, London, UK <br>
+							<b>Programme and Workshop Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/cvmp22.png" />
+							</a>
+						</td>
+						<td>
+							<a href="https://www.cvmp-conference.org/2022/"> The 19th European Conference on Visual Media Production (CVMP 2022) </a>, London, UK <br>
+							<b>Full Papers Chair</b>
+						</td>
+					</tr>
+				</table>	
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/misc/3dv2021.png" />
 							</a>
 						</td>
 						<td>
-							<a href="https://3dv2021.surrey.ac.uk/"> International Conference on 3D Vision (3DV 2021) </a> in December 2021, Online <br>
+							<a href="https://3dv2021.surrey.ac.uk/"> International Conference on 3D Vision (3DV 2021) </a>, Online <br>
 							<b>Publication Chair</b>
 						</td>
 					</tr>
@@ -681,7 +790,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="https://www.cvmp-conference.org/2021/"> The 18th European Conference on Visual Media Production (CVMP 2021) </a> in December 2021, London <br>
+							<a href="https://www.cvmp-conference.org/2021/"> The 18th European Conference on Visual Media Production (CVMP 2021) </a>, London, UK <br>
 							<b>Short Papers Chair</b>
 						</td>
 					</tr>
@@ -695,7 +804,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="https://dynavis.github.io/2021/"> DynaVis - The Third International Workshop on Dynamic Scene Reconstruction @ CVPR 2021 </a> in June 2021, Online <br>
+							<a href="https://dynavis.github.io/2021/"> DynaVis - The Third International Workshop on Dynamic Scene Reconstruction @ CVPR 2021 </a>, Online <br>
 							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
@@ -710,7 +819,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="http://3dv2020.dgcv.nii.ac.jp/"> International Conference on 3D Vision (3DV 2020) </a> in November 2020, Online <br>
+							<a href="http://3dv2020.dgcv.nii.ac.jp/"> International Conference on 3D Vision (3DV 2020) </a>, Online <br>
 							<b>Area Chair</b>
 						</td>
 					</tr>
@@ -724,7 +833,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="https://www.cvmp-conference.org/2020/"> The 17th European Conference on Visual Media Production (CVMP 2020) </a> in December 2020, Online <br>
+							<a href="https://www.cvmp-conference.org/2020/"> The 17th European Conference on Visual Media Production (CVMP 2020) </a>, Online <br>
 							<b>Public Relations Chair</b>
 						</td>
 					</tr>
@@ -738,7 +847,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="https://dynavis.github.io/2020/"> DynaVis - The Second International Workshop on Dynamic Scene Reconstruction @ CVPR 2020 </a> in June 2020, Seattle, Washington <br>
+							<a href="https://dynavis.github.io/2020/"> DynaVis - The Second International Workshop on Dynamic Scene Reconstruction @ CVPR 2020 </a>, Seattle, Washington <br>
 							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
@@ -753,7 +862,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="https://dynavis.github.io/2019/"> DynaVis - The First International Workshop on Dynamic Scene Reconstruction @ CVPR 2019 </a> on 15 June 2019, Long Beach, California <br>
+							<a href="https://dynavis.github.io/2019/"> DynaVis - The First International Workshop on Dynamic Scene Reconstruction @ CVPR 2019 </a>, Long Beach, California <br>
 							<b>Organiser</b> <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
@@ -769,7 +878,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="http://www.bmva.org/_media/meetings:BMVA3DSceneReport.pdf"> BMVA symposium on Dynamic Scene Reconstruction </a> on 21 June 2017 , London <br>
+							<a href="http://www.bmva.org/_media/meetings:BMVA3DSceneReport.pdf"> BMVA symposium on Dynamic Scene Reconstruction </a>, London <br>
 							<b>Organiser</b> <br>
 							Organisers: <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a><br>
 						</td>
