--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	<section id="bio">
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12" id="top">
-				<h3><font size="+2" color="#000080">Biography</font></h3>
-				<b><font size="+1"> Royal Academy of Engineering Research Fellow, FHEA </font> <br> </b> <br>
+				<!-- <h3><font size="+2" color="#000080">Biography</font></h3> -->
+				<b><font size="+1"> PhD, FHEA, RAEng Research Fellow </font> <br> </b> <br>
 				<!--<small><i><a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a>,<br>
 				<a href ="http://www.surrey.ac.uk/"> University of Surrey </a>, UK </b></i></small> <br> -->
 				
@@ -123,8 +123,9 @@
 	<section id="research">
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-				<h3><font size="+2" color="#000080">Research</font></h3>
-				<h4><b><font size="+1">Projects</font></b></h4>
+				<h2><font size="+4" color="#000080">Research</font></h2>
+				<br/>
+				<h3><b><font size="+3">Projects</font></b></h3>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -222,9 +223,103 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b><font size="+1">Publications</font></b></h4>
+				<br/>
+				<br/>
+				<h3><b><font size="+3">Publications</font></b></h3>
 				<!-- create table-responsive tables responsive to the xapuza made me do it -->
 				<!-- <h4>2018</h4> -->
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/iccvw23.png" />
+							</a>
+						</td>
+						<td>
+							<b>UPGPT: Universal Diffusion Model for Person Image Generation, Editing and Pose Transfer</b><br>
+							Soon Cheong, Armin Mustafa, and Andrew Gilbert<br>
+							at <i>International Conference in Computer Vision Workshops (ICCVW) 2023</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/2304.08870">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=2E8MSRlcN54&t=16s">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/iccvw2023.png" />
+							</a>
+						</td>
+						<td>
+							<b>PAT: Position-Aware Transformer for Dense Multi-Label Action Detection</b><br>
+							Faegheh Sardari, Armin Mustafa, Philip JB Jackson, and Adrian Hilto<br>
+							at <i>International Conference in Computer Vision Workshops (ICCVW) 2023</I><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://openaccess.thecvf.com/content/ICCV2023W/CVEU/html/Sardari_PAT_Position-Aware_Transformer_for_Dense_Multi-Label_Action_Detection_ICCVW_2023_paper.html">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/cvprw23.png" />
+							</a>
+						</td>
+						<td>
+							<b>SEM-POS: Grammatically and Semantically Correct Video Captioning</b><br>
+							Asmar Nadeem, Adrian Hilton, Robert Dawes, Graham Thomas, and Armin Mustafa<br>
+							at <i>IEEE International Conference in Computer Vision & Pattern Recognition Workshops (CVPRW) 2023</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" https://openaccess.thecvf.com/content/CVPR2023W/MULA/html/Nadeem_SEM-POS_Grammatically_and_Semantically_Correct_Video_Captioning_CVPRW_2023_paper.html">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/bmvc2022.png" />
+							</a>
+						</td>
+						<td>
+							<b>KPE: Keypoint Pose Encoding for Transformer-based Image Generation</b><br>
+							Soon Cheong, Armin Mustafa, and Andrew Gilbert<br>
+							at <i>The 33rd British Machine Vision Conference(BMCV) 2022</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/2203.04907">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=wYsnkabRl98&t=514s">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/ijcv2022.png" />
+							</a>
+						</td>
+						<td>
+							<b>4D Temporally Coherent Multi-Person Semantic Reconstruction and Segmentation</b><br>
+							Armin Mustafa, Chris Russell, and Adrian Hilton<br>
+							at <i>International Journal in Computer Vision (IJCV) 2022</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://link.springer.com/article/10.1007/s11263-022-01599-4">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -1213,44 +1308,6 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b><font size="+1">Teaching</font></b></h4>
-				<table class="table-responsive">
-					<tr>
-						<td>
-						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40" />
-						</td>
-						<td>
-							<font size="+0.25">&nbsp Teaching Assistant for 'Advanced Signal Processing (EEEM007)': Jan’ 2020 – Apr' 2020</font> <br style="line-height: 8px" />
-							<font size="+0.25">&nbsp Tutor for 'Fundamentals of Digital Signal Processing (EEE3008)': Sep’ 2019 – Dec' 2019</font> <br style="line-height: 8px" />
-							<b>&nbsp University of Surrey, UK </b><br/>
-						</td>
-					</tr>
-				</table>
-				<br/>
-				<table class="table-responsive">
-					<tr>
-						<td>
-						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40" />
-						</td>
-						<td>
-							<font size="+0.25">&nbsp Demonstrator for 'C++ and Object-Oriented Design(EEE2047)' (alternate semester): Jan' 2014 – Jun’ 2016</font> <br style="line-height: 8px" />
-							<font size="+0.25">&nbsp Demonstrator for 'Programming in C (EEE1035)' (alternate semester): Oct’ 2013 – Dec’ 2015</font> <br style="line-height: 8px" />
-							<b>&nbsp University of Surrey, UK </b><br/>
-						</td>
-					</tr>
-				</table>
-				<br/>
-				<table class="table-responsive">
-					<tr>
-						<td>
-						<img class="img-rounded" src="docs/files/iitk.png" alt="" width="40" height="40"/>
-						</td>
-						<td>
-							<font size="+0.25">&nbsp Teaching Assistant: Apr’ 2009 – Mar’ 2010</font> <br style="line-height: 8px" />
-							<b>&nbsp Indian Institute of Technology, Kanpur, India</b><br/>
-						</td>
-					</tr>
-				</table>
 				<br>
 				<p>
 					<font size="+0.25">For detailed CV please <a href="#contact">contact</a> me. </font>
