--- a/index.html
+++ b/index.html
@@ -232,6 +232,39 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/files/wacv24.png" />
+							</a>
+						</td>
+						<td>
+							<b>CAD - Contextual Multi-modal Alignment for Dynamic AVQA</b><br>
+							Asmar Nadeem, Adrian Hilton, Robert Dawes, Graham Thomas, and Armin Mustafa<br>
+							at <i>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2024</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" https://arxiv.org/abs/2310.16754">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/aaai24.png" />
+							</a>
+						</td>
+						<td>
+							<b>DTF-AT: Decoupled Time-Frequency Audio Transformer for Event Classification</b><br>
+							Tony Alex, Sara Ahmed, Armin Mustafa, Muhammad Rana and Philip Jackson<br>
+							at <i>The 38th Annual AAAI Conference on Artificial Intelligence 2024</i><br>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/misc/iccvw23.png" />
 							</a>
 						</td>
